btn alignment fixes

--- a/packages/ui-toolkit/src/components/atoms/Button/button.css
+++ b/packages/ui-toolkit/src/components/atoms/Button/button.css
@@ -4,9 +4,6 @@
   cursor: default;
 }
 
-.btn96ParentClass {
- display: inline-block;
-}
 
 .btn96DefaultClass:hover {
   opacity: 0.9;
